--- a/conda-gpu.yml
+++ b/conda-gpu.yml
@@ -8,7 +8,7 @@ dependencies:
   - cudnn
   - cudatoolkit==10.1.243
   - pip:
-    - tensorflow-gpu=2.5.1
+    - tensorflow-gpu==2.5.1
     - lxml
     - tqdm
     - -e .
